--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   clip-rule="evenodd"
                 />
               </svg>
-                    <a href="#">Become a volunteers</a>
+                    <a href="#">Become a volunteer</a>
                 </div>
 
                 <div class="col-2">
